[package]
name = "osm_boundaries_utils"
version = "0.6.0"
authors = ["dt.ro <dt.ro@canaltp.fr>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
description = "utilities to help reading OpenStreetMap boundaries in rust."
repository = "https://github.com/QwantResearch/osm_boundaries_utils_rs"
keywords = ["openstreetmap", "osm", "boundaries"]
license = "WTFPL"
readme = "README.md"

[dependencies]
log = "0.4"
osmpbfreader = { git = "https://github.com/mkulke/osmpbfreader-rs", branch = "smart-string" }
smartstring = { version = "0.2", features = ["serde"] }
geo-types = "^0.6"
geo = "0.14"
